--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
   "dependencies": {
     "@mapbox/geo-viewport": "0.4.0",
     "@types/jest": "^24.0.18",
+    "axios": "^1.7.7",
     "geojson": "0.5.0",
-    "jest": "^24.9.0",
+    "jest": "^29.7.0",
     "lodash.isequal": "4.5.0",
     "supercluster": "6.0.0"
   },
@@ -67,7 +68,7 @@
     "lint-staged": "^9.4.0",
     "prettier": "1.16.4",
     "react": "^16.9.0",
-    "react-native": "0.59.2",
+    "react-native": "^0.75.3",
     "react-native-maps": "0.23.0",
     "react-test-renderer": "^16.9.0",
     "rollup": "1.8.0",
@@ -83,5 +84,17 @@
     "react": ">=16.0.0",
     "react-native": ">=0.50.0",
     "react-native-maps": ">=0.23.0"
+  },
+  "resolutions": {
+    "micromatch": ">=4.0.8",
+    "braces": " >=3.0.3",
+    "react-devtools-core": ">=4.28.4",
+    "minimist": ">=0.2.4",
+    "merge": ">=2.1.1",
+    "shell-quote": ">=1.7.3",
+    "node-fetch": ">=2.6.7",
+    "yargs-parser": ">=13.1.2",
+    "node-notifier": ">=8.0.1",
+    "mem": ">=4.0.0"
   }
 }
